<resources>
    <string name="app_name">MyMedeciene</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="gps_Settings">GPS</string>
    <string name="gps_Message">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="gps_Settings_yes">Gps setting</string>
    <string name="gps_Setting_No">Cancel</string>
    <string name="gps_cordinate_saved">Coordinates saved </string>
    <string name="gps_settings">GPS</string>
    <string name="gps_message">GPS is not enabled. Do you want to go to settings menu ?</string>
    <string name="gps_settings_yes">Gps Setting</string>
    <string name="gps_settings_no">Cancel</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="name">Pharmacy  Name</string>
    <string name="phone">Pharmacy Phone</string>
    <string name="address">Pharmacy Address</string>
    <string name="save">Save</string>
    <string name="password_hint">Your Password</string>
    <string name="singup">Sign Up</string>
    <string name="drug_name">Drug Name</string>
    <string name="drug_price">Drug Price</string>
    <string name="add">Add</string>
    <string name="home">Home</string>
    <string name="noItemFound">Not Find Any Drugs</string>
    <string name="title_activity_maps">Map</string>
    <string name="checkDrug">This Drug has Already Added Before </string>
    <string name="update">Update</string>
    <string name="add_drug_done">add Drug Done</string>
    <string name="permission_denied_location">Permission location to get your Current Location \n to draw route at Map  </string>
    <string name="permission_denied_phone">Permission phone to Call Pharmacy   </string>
    <string name="call_permission">Call Permission Dialog</string>
    <string name="drug_name_empty">Drug name not be Empty</string>
    <string name="drug_price_empty">Drug price not be Empty</string>
    <string name="connected">connected</string>
    <string name="no_connected">not  Internet connect</string>
    <string name="wait_dailog">wait for Open map ......</string>
    <string name="drug_added">Drug added Successfully</string>
    <string name="drug_update">Drud Updated Successfully</string>
    <string name="name_empty">name not be Empty</string>
    <string name="phone_empty">phone not invalid</string>
    <string name="location_empty">location not be Empty</string>
    <string name="phone_invalid">your phone not Valid</string>
    <string name="password_invalid">your password  must be more than 6 chars</string>
    <string name="ph_name_invalid">pharmacy name not be Empty</string>
    <string name="ph_phone_invalid">pharmacy phone not valid</string>
    <string name="ph_pass_invalid"><![CDATA[pharmacy password must be > 6 chars]]></string>
    <string name="ph_location_invalid">pharmacy location not be Empty</string>
    <string name="mapLoad">Map loading .......</string>
    <string name="type">to select map type</string>
    <string name="drug_img">To select drug img</string>
    <string name="to_delete_bubble">to delete bubble</string>
    <string name="to_show_all_drug_img">To show all drug img</string>
    <string name="to_show_drug_img">To show drug img</string>
    <string name="app_logo">APP LOGO</string>
    <string name="map_type">map type</string>
    <string name="not_allow">not allow as you are not a Pharmacy .</string>
    <string name="name_hint_">name :</string>
    <string name="price_hint_">price :</string>
    <string name="quantity_">quantity :</string>
    <string name="type_">type :</string>
    <string name="phar_name_">Phar name :</string>
    <string name="phone_">phone :</string>
    <string name="location_">location :</string>
    <string name="names">name :</string>
    <string name="price_">Price :</string>
    <string name="type__">Type :</string>
    <string name="all_drugs">All Drugs</string>
    <string name="zero">0</string>
    <string name="slash">/</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_drugs">My Drugs</string>
    <string name="add_new_drug_">Add New Drug</string>
    <string name="log_out_">Log Out</string>
    <string name="search_">Search</string>
    <string name="to_edit_pharmacy_img">to edit pharmacy img</string>
    <string name="regist">To allow to add post must be login</string>
    <string name="post">Post</string>
    <string name="write_your_post">write your post</string>
    <string name="add_post">Add Post</string>
    <string name="by_drug_name">BY Drug </string>
    <string name="by_pharmacy_name">By Pharmacy </string>
    <string name="by_both">By Both</string>
    <string name="write_a_comment">write a comment</string>
    <string name="update_">Update ....</string>
    <string-array name="drug_type">
        <item>Injections</item>
        <item>Capsules</item>
        <item>Liquid</item>
        <item>Tablet</item>
        <item>Drops</item>
        <item>Inhalers</item>
        <item>Suppositories</item>
    </string-array>
    <string-array name="tabs">
        <item>All Drugs</item>
        <item>Posts</item>
        <item>My Drugs</item>
    </string-array>
    <string name="title_activity_location">Map</string>


</resources>
