<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/app_bar_search_menu"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search_"
        app:showAsAction="ifRoom|withText"
        app:actionViewClass="android.support.v7.widget.SearchView" />
    <group android:id="@+id/group"
        android:checkableBehavior="single">
    <item
        android:id="@+id/by_drug_name"
        android:title="@string/by_drug_name"/>
    <item
        android:id="@+id/by_pharmacy_name"
        android:title="@string/by_pharmacy_name"
        />
        <item
        android:id="@+id/by_both"
        android:title="@string/by_both"
        />
    </group>



</menu>