<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"

    >
    <LinearLayout
        android:id="@+id/login_layout"

        android:layout_marginTop="@dimen/_15sdp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"

        >


        <ImageView
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:src="@drawable/logo"
            android:contentDescription="TODO"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:hint="@string/phone"
            android:padding="@dimen/_10sdp"
            android:background="@drawable/edt_code_shape"
            android:layout_margin="@dimen/_20sdp"
            android:inputType="phone"
            android:id="@+id/email"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:hint="@string/password_hint"
            android:padding="@dimen/_10sdp"
            android:background="@drawable/edt_code_shape"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:inputType="textWebPassword"
            android:id="@+id/password"
            />

        <Button
            android:layout_marginRight="@dimen/_25sdp"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:textAllCaps="false"
            android:background="@drawable/but_submit"
            android:textColor="@color/gray"
            android:text="@string/login"
            android:id="@+id/but_login"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/register"
            />

        <ProgressBar
            android:visibility="gone"
            android:layout_marginTop="@dimen/_20sdp"
            android:id="@+id/login_progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/colorPrimaryDark"/>
    </LinearLayout>

</ScrollView>