<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/_5sdp">

    <android.support.v7.widget.CardView
        android:elevation="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_22sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_10sdp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_38sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            >

            <EditText
                android:id="@+id/edt_pharmacy_name"
                android:inputType="textPersonName"
                android:hint="@string/name"
                android:padding="@dimen/_7sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edt_code_shape"
                />


            <EditText
                android:id="@+id/edt_pharmacy_phone"
                android:inputType="phone"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/phone"
                android:padding="@dimen/_7sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edt_code_shape"
                />

            <EditText
                android:id="@+id/edt_pharmacy_location"
                android:inputType="textLongMessage"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/address"
                android:padding="@dimen/_7sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edt_code_shape"
                />

            <Button
                android:id="@+id/save"
                android:textSize="@dimen/_17sdp"
                android:textAllCaps="false"
                android:text="@string/save"
                android:textColor="@color/gray"
                android:layout_marginRight="@dimen/_30sdp"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/but_submit"
                />



        </LinearLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:elevation="@dimen/_10sdp"
        android:layout_gravity="center|top"
        android:id="@+id/close"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/ic_edt"
        />
</FrameLayout>