<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp">

        <android.support.v7.widget.CardView
            android:elevation="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_22sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_10sdp"
            tools:ignore="UnusedAttribute">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_38sdp"
                android:layout_marginBottom="@dimen/_10sdp">

                <EditText
                    android:id="@+id/edt_drug_name"
                    android:inputType="textPersonName"
                    android:hint="@string/drug_name"
                    android:padding="@dimen/_7sdp"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edt_code_shape" />


                <EditText
                    android:id="@+id/edt_drug_price"
                    android:inputType="number"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/drug_price"
                    android:padding="@dimen/_7sdp"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edt_code_shape" />

                <LinearLayout
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Spinner
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:id="@+id/sp_drug_type"
                        android:padding="@dimen/_10sdp"
                        android:spinnerMode="dropdown" />

                    <Spinner
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:id="@+id/sp_drug_quantity"
                        android:padding="@dimen/_10sdp"
                        android:spinnerMode="dropdown"
                        tools:ignore="RtlHardcoded" />

                </LinearLayout>


                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_120sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp">

                    <ImageButton
                        android:scaleType="centerCrop"
                        android:id="@+id/ib_drug_img"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_120sdp"
                        android:background="@drawable/download"
                        android:contentDescription="TODO"
                        tools:ignore="ContentDescription,HardcodedText" />

                    <ProgressBar
                        android:visibility="gone"
                        android:id="@+id/img_load_drug"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />

                    <TextView
                        android:visibility="gone"
                        android:id="@+id/txt_progress_drug"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="0"
                        tools:ignore="HardcodedText" />
                </FrameLayout>


                <Button
                    android:id="@+id/add"
                    android:textSize="@dimen/_17sdp"
                    android:textAllCaps="false"
                    android:text="@string/add"
                    android:textColor="@color/gray"
                    android:layout_marginEnd="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/but_submit" />


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <Button
            android:elevation="@dimen/_10sdp"
            android:layout_gravity="center|top"
            android:id="@+id/close_drug"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/ic_close"
            tools:ignore="UnusedAttribute" />
    </FrameLayout>
</ScrollView>